tests/compilation_failure_tests/non_unit_variant/variant_tuple_empty.stderr
error: Variant A is not a unit variant, all variants must be unit variants to derive EnumRotate
 --> tests/compilation_failure_tests/non_unit_variant/variant_tuple_empty.rs:5:5
  |
5 |     A(),
  |     ^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/compilation_failure_tests/non_unit_variant/variant_tuple_empty.rs:6:2
  |
6 | }
  |  ^ consider adding a `main` function to `$DIR/tests/compilation_failure_tests/non_unit_variant/variant_tuple_empty.rs`
